*** empty log message ***

--- a/doc/src/manual/ch-ana-sim.tex
+++ b/doc/src/manual/ch-ana-sim.tex
@@ -9,7 +9,7 @@ Output vectors are time series data: values with timestamps.
 You can use output vectors to record end-to-end delays or
 round trip times of packets, queue lengths, queueing times,
 link utilization, the number of dropped packets, etc. --
-anything that's useful to get a full picture of what happened
+anything that is useful to get a full picture of what happened
 in the model during the simulation run.
 
 Output vectors are recorded from simple modules, by \cclass{cOutVector} objects
@@ -41,7 +41,7 @@ raster formats such as GIF) with a click. On Windows, you can also
 copy the graph to the clipboard in a vector format (Windows metafile)
 and paste it into other applications.
     \footnote{Note: prior to {\opp} 3.0, Plove has been a front-end to
-    gnuplot. This older version of Plove is no longer supported, but it's still
+    gnuplot. This older version of Plove is no longer supported, but it is still
     available in the {\opp} source distribution.}
 
 Filtering the results\index{filtering results} before plotting is
