--- a/doc/src/manual/ch-graphics.tex
+++ b/doc/src/manual/ch-graphics.tex
@@ -393,7 +393,7 @@ within a compound module:
 setDisplayString("p=100,100;b=60,30,rect;o=red,black,3", true);
 \end{verbatim}
 
-Setting appearance of a compound module when it's displayed as a
+Setting appearance of a compound module when it is displayed as a
 bounding box for its submodules:
 
 \begin{verbatim}
