--- a/doc/src/manual/ch-introduction.tex
+++ b/doc/src/manual/ch-introduction.tex
@@ -56,7 +56,7 @@ ones plugged in. Models do not need any special instrumentation
 to be run in parallel -- it is just a matter of configuration.
 {\opp} can even be used for classroom presentation of parallel
 simulation algorithms, because simulations can be run in parallel
-even under the GUI which provides detailed feedback on what's going on.
+even under the GUI which provides detailed feedback on what is going on.
 
 {\omnest} is the commercially supported version of {\omnetpp}.
 {\omnetpp} is only free for academic and non-profit use --
