--- a/doc/src/manual/ch-messages.tex
+++ b/doc/src/manual/ch-messages.tex
@@ -159,7 +159,7 @@ in such a scenario -- otherwise self-messages are normal messages,
 of class \cclass{cMessage} or a class derived from it.
 
 When a message is delivered to a module by the simulation kernel,
-you can call the \fname{isSelfMessage()} method to determine if it's
+you can call the \fname{isSelfMessage()} method to determine if it is
 a self-message; it other words, if it was scheduled with
 \fname{scheduleAt()} or was sent with one of the
 \fname{send...()} methods. The \fname{isScheduled()} method
