--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -1652,7 +1652,7 @@ by selecting \textit{Inspect|From list of all objects...} from
 the Tkenv menu, and reviewing the list in the dialog that pops up.
 (If the model is large, it may take a while for the dialog to appear.)
 
-If the number of messages is stable, it's still possible
+If the number of messages is stable, it is still possible
 you're leaking other \cclass{cObject}-based objects. You can
 also find them using Tkenv's \textit{Inspect|From list of all objects...}
 function.
