*** empty log message ***

--- a/doc/src/manual/ch-run-sim.tex
+++ b/doc/src/manual/ch-run-sim.tex
@@ -758,7 +758,7 @@ its parts written in Tcl script.
 The default path from where the icons are loaded can be changed with
 the \fvar{OMNETPP\_BITMAP\_PATH} variable, which is a
 semicolon-separated list of directories and defaults to
-``\textit{omnetpp-dir}/bitmaps;.;./bitmaps''.
+\ttt{\textit{omnetpp-dir}/bitmaps;./bitmaps}.
 \end{sloppypar}
 
 \subsubsection{Embedding Tcl code into the executable}
@@ -795,7 +795,7 @@ from the distribution:
 \end{itemize}
 
 
-\section{More about omnetpp.ini}
+\section{More omnetpp.ini settings}
 
 
 \subsection{Module parameters in the configuration file}
