--- a/src/envir/ChangeLog
+++ b/src/envir/ChangeLog
@@ -1,3 +1,11 @@
+2004-12-08  Andras Varga
+
+	* omnetapp.cc/h, cenvir.cc: added ev.getParameterUseDefault() function.
+	New ini file option:
+	  <paramname>.use-default = yes
+	If set, the given module parameter(s) will use the defaults specified
+	in the NED file via the input() operator.
+
 2004-11-29  Andras Varga
 
   	* on Mac OS/X, implement ftime() with gettimeofday() [patch from 
