--- a/src/sim/netbuilder/ChangeLog
+++ b/src/sim/netbuilder/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-10  Andras Varga
+
+	* cnednetworkbuilder.cc/.h: several fixes in expression evaluation code
+
 2004-11-23  ------ omnetpp-3.0b1 released ------
 
 2004-11-03  ------ omnetpp-3.0a9 released ------
