--- a/src/sim/ChangeLog
+++ b/src/sim/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-10  Andras Varga
+
+	* csimulation.cc: implemented getUniqueNumber()
+
 2004-12-08  Andras Varga
 
 	* cpar.cc: read(): invoke new ev.getParameterUseDefault() function
